--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
       <br>
 
-       <center><a href="https://mathiasrecalde.github.io/maradona/"> <img src="2.jpg" border="8" width="300" height="150" alt="Maradona" /> </a></center>  
+       <center><a href="https://elpro578.github.io/lo/"> <img src="2.jpg" border="8" width="300" height="150" alt="Maradona" /> </a></center>  
 
         <br>
 
