--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
    <br>
 
-        <center><a href="https://elpro578.github.io/lu/"> <img src="3.jpg" border="8" width="300" height="150" alt="3" /> </a>
+        <center><a href="https://elpro578.github.io/leyendas/"> <img src="3.jpg" border="8" width="300" height="150" alt="3" /> </a>
 
     <br>
 
