--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
       <br>
 
-       <center><a href="https://elpro578.github.io/sopa/"> <img src="2.jpg" border="8" width="300" height="150" alt="2" /> </a></center>  
+       <center><a href="https://elpro578.github.io/trifor/"> <img src="2.jpg" border="8" width="300" height="150" alt="2" /> </a></center>  
 
         <br>
 
